...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EnterWalkInformationActivity">


    <Button
        android:id="@+id/enter_walk_info_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/enter_walk_info_label_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
            android:id="@+id/enter_walk_info_route_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_route_name" />

        <EditText
            android:id="@+id/route_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_route_name"
            android:inputType="textPersonName"
            android:text="" />
...
            android:id="@+id/starting_point_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_starting_point" />

        <EditText
            android:id="@+id/starting_point_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_starting_point"
            android:inputType="textPersonName"
            android:text="" />
...
            android:layout_height="wrap_content"
            android:text="@string/loop"

            />

        <RadioButton
            android:id="@+id/out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_and_back"
            app:layout_constraintEnd_toEndOf="parent"

            />
...
            android:layout_height="wrap_content"
            android:text="@string/streets"

            />

        <RadioButton
            android:id="@+id/trail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trail" />

    </RadioGroup>

...
