<resources>
    <string name="app_name">wwrapp</string>

    <string name="action_settings">Settings</string>
    <string name="enter_walk_info_label_done">Done</string>
    <string name="enter_walk_info_label_cancel">Cancel</string>
    <string name="label_route_name">Route name *</string>
    <string name="hint_route_name">Route name</string>
    <string name="label_starting_point">Starting point</string>
    <string name="hint_starting_point">Starting point</string>
    <string name="title_activity_home_screen">MockHomeScreenActivity</string>
    <string name="home_screen_step_string">Your steps for the day:</string>
    <string name="home_screen_miles_string">Your miles for the day:</string>
    <string name="home_toolbar_string">Home</string>
    <string name="start_new_walk_string">Start new walk/run</string>
    <string name="routes_screen_button_label">Go to Routes</string>
    <string name="plus">+</string>
    <string name="loop">loop</string>
    <string name="out_and_back">out-and-back</string>
    <string name="flat">flat</string>
    <string name="hilly">hilly</string>
    <string name="streets">streets</string>
    <string name="trail">trail</string>
    <string name="even">even</string>
    <string name="uneven">uneven</string>
    <string name="easy">easy</string>
    <string name="moderate">moderate</string>
    <string name="difficult">difficult</string>
    <string name="add_favorite">Add to favorite</string>
    <string name="notes">Notes:</string>
    <string name="empty"></string>


    <string name="title_activity_height_page">HeightScreenActivity</string>
    <string name="enter_text_field">Enter Your Height</string>
    <string name="done_height_button">Done</string>
...
    <string name="zero_hr">0 hr</string>
    <string name="zero_min">0 min</string>
    <string name="zero_sec">0 sec</string>
    <string name="stop_and_save_changes">Stop and save changes</string>
    <string name="add_five_hundred_Steps">Add 500 Steps</string>
    <string name="set_ms">set ms</string>
    <string name="tags">Tags:</string>
    <string name="date">Date:</string>
    <string name="route_name">Route_name</string>
    <string name="x">X</string>
    <string name="starting_Point">Starting Point: </string>
    <string name="steps">Steps: </string>
    <string name="miles">Miles: </string>
    <string name="start_walk">Start Walk</string>
    <string name="edit">Edit</string>
...
