<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RoutesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view_route"
        tools:listitem="@layout/layout_listitem"

        >

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/addNewRouteButton"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/plus"
            android:textSize="@dimen/content_height_size"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            />

        <Button
            android:id="@+id/teammateRouteBtn"
            android:layout_width="314dp"
            android:layout_height="69dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="92dp"
            android:layout_marginBottom="1dp"
            android:text="Teammate Routes"
            android:textSize="20dp" />
    </RelativeLayout>
</RelativeLayout>