<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RouteDetailActivity">

    <TextView
        android:id="@+id/tagID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        android:textColor="#000"
        android:textSize="@dimen/route_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_detail_date" />

    <TextView
        android:id="@+id/noteID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textColor="#000"
        android:textSize="@dimen/route_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="#000"
        android:textSize="@dimen/route_detail"
        app:layout_constraintEnd_toStartOf="@+id/route_detail_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepID" />

    <TextView
        android:id="@+id/route_detail_date"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/route_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mileID"  />

    <TextView
        android:id="@+id/miles_text_view"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/route_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mileID"
        app:layout_constraintTop_toBottomOf="@id/starting_point_text_view" />

    <TextView
        android:id="@+id/steps_text_view"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/route_detail"
        app:layout_constraintStart_toEndOf="@+id/stepID"
        app:layout_constraintTop_toBottomOf="@id/starting_point_text_view" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/routeToolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/route_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/route_name"
            android:textSize="32sp" />

        <Button
            android:id="@+id/close_route_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/fui_transparent"
            android:textSize="32sp"
            android:text="@string/x" />

        <ToggleButton
            android:id="@+id/favoriteBtnDetail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:textOff=""
            android:textOn="" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_Point"
        android:textColor="#000"
        android:textSize="@dimen/route_detail"
        app:layout_constraintEnd_toStartOf="@+id/starting_point_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeToolbar" />

    <TextView
        android:id="@+id/starting_point_text_view"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/route_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeToolbar"  />

    <TextView
        android:id="@+id/notes_text_view"
        android:layout_width="412dp"
        android:layout_height="142dp"
        android:text=""
        android:textSize="@dimen/route_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteID" />

    <TextView
        android:id="@+id/stepID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textColor="#000"
        android:textSize="@dimen/route_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starting_point_text_view"  />

    <TextView
        android:id="@+id/mileID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles"
        android:textColor="#000"
        android:textSize="@dimen/route_detail"
        app:layout_constraintStart_toEndOf="@id/steps_text_view"
        app:layout_constraintTop_toBottomOf="@id/starting_point_text_view" />

    <Button
        android:id="@+id/start_existing_walk_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_walk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/proposeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propose_walk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/tag_layout"
        android:layout_width="409dp"
        android:layout_height="105dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagID">

        <TextView
            android:id="@+id/tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/tag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/tag4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/tag5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>